--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -96,7 +96,27 @@
     border-radius: 50%;
     margin-right: 1rem;
   }
+}
 
-  &__user-name {
+// side bar
+
+.side-nav {
+  &__item {
   }
+  &__link {
+  }
+
+  &__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+  }
+}
+
+// legal text
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem;
 }
