--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -101,14 +101,51 @@
 // side bar
 
 .side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
   &__item {
+    position: relative;
+    &:not(::last-child) {
+      margin-bottom: 0.5rem;
+    }
   }
-  &__link {
+  &__item::before {
+    content: "";
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1),
+      background-color 0.1s;
+  }
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+  &__link,
+  &__link:visited {
+    color: var(--color-grey-light-1);
+    text-decoration: none;
+    position: relative;
+    padding: 1.5rem 3rem;
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
     height: 1.75rem;
     width: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor; // this is the color of the parent component
   }
 }
 
