--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
   height: 7rem;
   font-size: 1.4rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,7 +30,26 @@
 
 .hotel-view {
   background-color: #fff;
+  flex: 1;
+}
 
-  height: 80rem;
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+}
+
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  margin-right: 4.5rem;
+  padding: 3rem;
+  flex: 0 0 60%;
+}
+
+.user-reviews {
+  background-color: green;
   flex: 1;
 }
