--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 120rem;
+  max-width: 140rem;
   margin: 8rem auto;
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
@@ -34,6 +34,7 @@
 }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
@@ -41,7 +42,6 @@
 }
 
 .description {
-  font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
   margin-right: 4.5rem;
@@ -50,6 +50,8 @@
 }
 
 .user-reviews {
-  background-color: green;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
