--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -34,6 +34,11 @@ Grey dark 3: #999
 
   --line: 1px solid var(--color-grey-light-2);
 }
+
+$bp-largest: 75em; //1200/16
+$bp-large: 68.75em; //1100/16
+$bp-medium: 56.25em; //900/16
+
 * {
   margin: 0;
   padding: 0;
@@ -46,6 +51,9 @@ Grey dark 3: #999
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1rem=10px
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 body {
   font-family: "Open Sans", sans-serif;
