--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,6 +38,8 @@ Grey dark 3: #999
 $bp-largest: 75em; //1200/16
 $bp-large: 68.75em; //1100/16
 $bp-medium: 56.25em; //900/16
+$bp-small: 37.5em; //600/16
+$bp-smallest: 31.25em; //500/16
 
 * {
   margin: 0;
