--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -19,6 +19,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media screen and (max-width: $bp-smallest) {
+    flex-wrap: wrap;
+    height: 11rem;
+    align-content: space-around;
+  }
 }
 
 .content {
@@ -50,6 +55,9 @@
   @media screen and (max-width: $bp-medium) {
     padding: 3rem;
   }
+  @media screen and (max-width: $bp-small) {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -61,6 +69,10 @@
   @media screen and (max-width: $bp-medium) {
     padding: 2rem;
     margin-right: 3rem;
+  }
+  @media screen and (max-width: $bp-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
   }
 }
 
